refactor: addressed comments