@@ -10,45 +10,10 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public class ClassMetaDataReflectionReader<T> implements EntityClassMetaData {
+public class ClassMetaDataReflectionReader<T> implements EntityClassMetaData<T> {
     private final Class<T> classType;
-    private List<Field> fields;
-    private Field idField;
-
-    private Class<?>[] getConstructorArgs() {
-        var fields = getAllFields();
-        return fields.stream()
-                    .map(field -> field.getType())
-                    .collect(Collectors.toList())
-                    .toArray(new Class<?>[fields.size()]);
-    }
-
-    private Field findIdField(List<Field> fields) {
-        Field idField = null;
-
-        for (var field: fields) {
-            if (ReflectionHelper.isAnnotatedWith(field, ru.otus.annotations.Id.class)) {
-                if (idField != null) {
-                    throw new ReflectionReaderException(classType, "contains more than one field with @Id annotation");
-                }
-                idField = field;
-            }
-        }
-        if (idField == null) {
-            throw new ReflectionReaderException(classType, "does not have a field annotated with @Id");
-        }
-
-        return idField;
-    }
-
-    private List<Field> readClassFields(Class<?> classType) {
-        var fields = Arrays.asList(classType.getDeclaredFields());
-        if (fields.isEmpty()) {
-            throw new ReflectionReaderException(classType, "class should have at least one field");
-        }
-
-        return fields;
-    }
+    private final List<Field> fields;
+    private final Field idField;
 
     public ClassMetaDataReflectionReader(Class<T> classType) {
         this.classType = classType;
@@ -85,6 +50,42 @@ public class ClassMetaDataReflectionReader<T> implements EntityClassMetaData {
     public List<Field> getFieldsWithoutId() {
         return fields.stream()
                 .filter(field -> field != idField)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    private Class<?>[] getConstructorArgs() {
+        var fields = getAllFields();
+        return fields.stream()
+                .map(field -> field.getType())
+                .collect(Collectors.toList())
+                .toArray(new Class<?>[fields.size()]);
+    }
+
+    private Field findIdField(List<Field> fields) {
+        Field idField = null;
+
+        for (var field: fields) {
+            if (ReflectionHelper.isAnnotatedWith(field, ru.otus.annotations.Id.class)) {
+                if (idField != null) {
+                    throw new ReflectionReaderException(classType, "contains more than one field with @Id annotation");
+                }
+                idField = field;
+            }
+        }
+        if (idField == null) {
+            throw new ReflectionReaderException(classType, "does not have a field annotated with @Id");
+        }
+
+        return idField;
+    }
+
+    private List<Field> readClassFields(Class<?> classType) {
+        var fields = Arrays.asList(classType.getDeclaredFields());
+        if (fields.isEmpty()) {
+            throw new ReflectionReaderException(classType, "class should have at least one field");
+        }
+
+        return fields;
+    }
+
 }
